Adding some final fixes for bbs.

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -50,8 +50,9 @@
       }
     }
 
-    li.isactive a {
-      color: @accent !important;
+    li.isactive * {
+      background-color: @accent !important;
+      color: @base !important;
     }
   }
 
@@ -305,7 +306,7 @@
       color : @text !important;
     }
 
-    label, legend {
+    label, legend, .spacer {
       color : @subtext0 !important;
     }
 
@@ -997,14 +998,14 @@
         border-color: @overlay0 !important;
       }
 
+      h2 {
+        color: @text !important;
+        background-color: inherit !important;
+      }
+
       #quickpost {
         .inform fieldset legend {
           color: @mantle !important;
-        }
-
-        h2 {
-          color: @text !important;
-          background-color: inherit !important;
         }
       }
 
@@ -1035,6 +1036,28 @@
       // Thread Square
       .icon {
         filter: @accent-filter !important;
+      }
+
+      body, content, content * {
+        color: @text !important;
+        background-color: @base !important;
+      }
+
+      code, pre, .codebox {
+        background-color: @mantle !important;
+        border-color: @overlay0 !important;
+      }
+
+      code {
+        color: @text !important;
+      }
+
+      label, legend {
+        color: @subtext0 !important;
+      }
+
+      img {
+        color: @text !important;
       }
 
       .punwrap {
@@ -1109,6 +1132,41 @@
         color: @text !important;
       }
 
+      .blocktable {
+        th {
+          color: @text !important;
+          background-color: @mantle !important;
+        }
+      }
+
+      fieldset p {
+        color: @subtext0 !important;
+      }
+
+      #users1 h2 {
+        color: @text !important;
+        background-color: @base !important;
+        border-color: @overlay1 !important;
+      }
+
+      .pagelink {
+        * {
+          border-color: @overlay0 !important;
+        }
+
+        .pages-label {
+          color: @subtext0 !important;
+        }
+
+        .spacer {
+          color: @subtext0 !important;
+        }
+
+        strong {
+          color: @accent !important;
+        }
+      }
+
       .blockpost {
         color: @text !important;
         background-color: @base !important;
@@ -1135,7 +1193,7 @@
           }
         }
 
-        .postleft dd :not(strong) {
+        .postedit, .postleft dd :not(strong) {
           color: @subtext0 !important;
         }
 
@@ -1144,12 +1202,13 @@
           border-color: transparent !important;
 
           .postfootleft, .postfootright {
+            color: @lavender !important;
             border-top-color: @overlay0 !important;
-
-            strong {
-              color: @lavender !important;
-            }
           }
+        }
+
+        .postsignature hr {
+          background-color: @overlay1 !important;
         }
 
         blockquote, .quotebox {
@@ -1162,6 +1221,10 @@
             background-color: @mantle !important;
           }
 
+          cite {
+            color: @accent !important;
+          }
+
           // This is necessary to fit style globally.
           p {
             margin-left: 10px;
@@ -1171,6 +1234,11 @@
             background-color: @surface1 !important;
           }
         }
+      }
+
+      .blockform {
+        color: @text !important;
+        border-color: @overlay1 !important;
       }
     }
   }
