fix(animepahe): change body color from crust to base

--- a/styles/animepahe/catppuccin.user.less
+++ b/styles/animepahe/catppuccin.user.less
@@ -43,8 +43,8 @@
 
         /* ---------- ELEMENT STYLES ---------- */
         body, .main-header, .content-wrapper, .nav-link {
-            background-color: @crust !important;
-            border-color: @crust !important;
+            background-color: @base !important;
+            border-color: @base !important;
         }
 
         .nav-link {
