Fix the background-image changes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -258,16 +258,14 @@
         @svg: escape(
           '<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="@{accent}" d="M6 1h5v5L8.86 3.85 4.7 8 4 7.3l4.15-4.16zM2 3h2v1H2v6h6V8h1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1"/></svg>'
         );
-        background-image: url("data:image/svg+xml,@{svg}") center right
-          no-repeat;
+        background-image: url("data:image/svg+xml,@{svg}");
       }
 
       a.extiw {
         @svg: escape(
           '<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="@{accent}" d="M5.002 1.01h7v7l-2-2-3 2v-1l3-2.25 1 1V2.01h-3.75l1 1-2.25 3h-1l2-3z"/><path fill="@{accent}" d="M7.002 3.01h-5v8h8v-5h-1v4h-6v-6h4z"/><path fill="@{accent}" d="M4.082 5.51c0-.621.621-.621.621-.621q2.796.932 3.728 3.728s0 .621-.62.621C6.566 7.374 5.945 6.753 4.081 5.51z"/></svg>'
         );
-        background-image: url("data:image/svg+xml,@{svg}") center right
-          no-repeat;
+        background-image: url("data:image/svg+xml,@{svg}");
       }
     }
 
