Fix specificity of navbarlist.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -505,8 +505,8 @@
         background-size: 190px 40px !important; // Required for AUR, which uses custom PNG which breaks this setting.
       }
 
-      #archnavbarlist li {
-        a {
+      ul#archnavbarlist li {
+        a, a:link {
           color: @text !important;
 
           &:hover {
@@ -551,7 +551,7 @@
     #lib.defaults();
     #lib.css-variables();
 
-    #archnavbar ul li#anb-packages a {
+    #archnavbar ul#archnavbarlist li#anb-packages a {
       color: @accent !important;
     }
   }
@@ -574,7 +574,7 @@
     #lib.defaults();
     #lib.css-variables();
 
-    #archnavbar ul li#anb-aur a {
+    #archnavbar ul#archnavbarlist li#anb-aur a {
       color: @accent !important;
     }
   }
