Add theming per subpage on aur.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -491,10 +491,6 @@
       color: @red !important;
     }
 
-    #archdev-navbar li a {
-      color: darken(@accent, 5%) !important;
-    }
-
     #archnavbar {
       background-color: @mantle !important;
       border-bottom-color: @accent !important;
@@ -580,6 +576,103 @@
   }
 }
 
+@-moz-document url("https://aur.archlinux.org/") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+@-moz-document url-prefix("https://aur.archlinux.org/packages") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/packages"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+@-moz-document url-prefix("https://aur.archlinux.org/requests") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/requests"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// deno-fmt-ignore
+@-moz-document regexp("https:\\/\\/aur\\.archlinux\\.org\\/accounts\\/.*\\/edit(?:\\/.*)?") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/packages"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
 // Arch Security
 @-moz-document url-prefix("https://security.archlinux.org/") {
   :root {
@@ -602,11 +695,7 @@
     }
 
     .navbar ul li {
-      a[href="/"] {
-        color: @accent !important;
-      }
-
-      b {
+      a[href="/"], b {
         color: @accent !important;
       }
     }
