--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -527,6 +527,24 @@
         color: @accent !important;
       }
     }
+
+    #archdev-navbar ul li {
+      a, a:link {
+        color: @text !important;
+
+        &:hover {
+          color: @sky !important;
+        }
+
+        &:active, &:focus-within {
+          color: @sapphire !important;
+        }
+
+        &:visited {
+          color: @lavender !important;
+        }
+      }
+    }
   }
 }
 
