Comment the aur subpage units!
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -594,6 +594,7 @@
   }
 }
 
+// AUR: Dashboard
 @-moz-document url("https://aur.archlinux.org/") {
   :root {
     @media (prefers-color-scheme: light) {
@@ -618,6 +619,7 @@
   }
 }
 
+// AUR: Packages
 @-moz-document url-prefix("https://aur.archlinux.org/packages") {
   :root {
     @media (prefers-color-scheme: light) {
@@ -642,6 +644,7 @@
   }
 }
 
+// AUR: Requests
 @-moz-document url-prefix("https://aur.archlinux.org/requests") {
   :root {
     @media (prefers-color-scheme: light) {
@@ -666,7 +669,7 @@
   }
 }
 
-// deno-fmt-ignore
+// deno-fmt-ignore // AUR: My Account
 @-moz-document regexp("https:\\/\\/aur\\.archlinux\\.org\\/accounts\\/.*\\/edit(?:\\/.*)?") {
   :root {
     @media (prefers-color-scheme: light) {
