Fix checklists, fix some headers.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -45,7 +45,7 @@
       }
     }
 
-    li.isactive a {
+    ul li.isactive a {
       background-color: @accent !important;
       color: @base !important;
     }
@@ -208,13 +208,21 @@
       }
     }
 
+    .multiselect {
+      color: @accent !important;
+    }
+
     .checklist {
       color: @text !important;
       background-color: @surface0 !important;
       border-color: @surface1 !important;
 
+      &:active, &:focus-within {
+        border-color: @accent !important;
+      }
+
       legend {
-        color: @peach !important;
+        color: @text !important;
       }
     }
 
@@ -291,7 +299,7 @@
 
     #__mediawiki.base() !important;
 
-    body, content, content * {
+    body, content {
       color: @text !important;
       background-color: @base !important;
     }
@@ -1138,8 +1146,7 @@
       border-color: @overlay0 !important;
 
       body,
-      content,
-      content * {
+      content {
         color: @text !important;
         background-color: @base !important;
       }
@@ -1175,7 +1182,13 @@
         border-color: @overlay0 !important;
       }
 
+      .punwrap {
+        background-color: @base !important;
+        border-color: @overlay0 !important;
+      }
+
       #mixins.a();
+      #mixins.inputs();
 
       h2 {
         color: @text !important;
@@ -1217,11 +1230,6 @@
         filter: @accent-filter !important;
       }
 
-      .punwrap {
-        background-color: @base !important;
-        border-color: @overlay0 !important;
-      }
-
       .pagelink.conl {
         color: @subtext0 !important;
 
@@ -1235,6 +1243,10 @@
         }
       }
 
+      fieldset p {
+        color: @subtext0 !important;
+      }
+
       .usercontent {
         color: @text !important;
       }
@@ -1243,10 +1255,12 @@
         background-color: @base !important;
         border-color: transparent !important;
 
-        * {
+        ul li a {
           background-color: @base !important;
           border-color: transparent !important;
         }
+
+        #mixins.a();
       }
 
       #brdfooternav {
@@ -1280,6 +1294,8 @@
 
       #brdmain {
         border-color: @overlay1 !important;
+
+        #mixins.a();
 
         ul li {
           border-color: @overlay1 !important;
