Add radio inputs pr, add fix for links. Needs to add upstream too, ignore for now.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -253,15 +253,15 @@
       }
     }
 
-    .mw-parser-output {
-      a.external {
+    .mw-parser-output :not(.plainlinks) a {
+      &.external {
         @svg: escape(
           '<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="@{accent}" d="M6 1h5v5L8.86 3.85 4.7 8 4 7.3l4.15-4.16zM2 3h2v1H2v6h6V8h1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1"/></svg>'
         );
         background-image: url("data:image/svg+xml,@{svg}");
       }
 
-      a.extiw {
+      &.extiw {
         @svg: escape(
           '<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="@{accent}" d="M5.002 1.01h7v7l-2-2-3 2v-1l3-2.25 1 1V2.01h-3.75l1 1-2.25 3h-1l2-3z"/><path fill="@{accent}" d="M7.002 3.01h-5v8h8v-5h-1v4h-6v-6h4z"/><path fill="@{accent}" d="M4.082 5.51c0-.621.621-.621.621-.621q2.796.932 3.728 3.728s0 .621-.62.621C6.566 7.374 5.945 6.753 4.081 5.51z"/></svg>'
         );
@@ -278,11 +278,76 @@
     .oo-ui-indicator-down {
       filter: @text-filter !important;
     }
+
     .oo-ui-image-invert.oo-ui-icon-check, .mw-ui-icon-check-invert::before {
       @svg: escape(
         '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path d="M7 14.2 2.8 10l-1.4 1.4L7 17 19 5l-1.4-1.4z" fill="@{crust}"/></svg>'
       );
       background-image: url("data:image/svg+xml,@{svg}");
+    }
+
+    .cdx-radio__input {
+      + .cdx-radio__icon, &:enabled + .cdx-radio__icon {
+        background-color: @base !important;
+        border-color: @surface0 !important;
+      }
+
+      &:hover + .cdx-radio__icon {
+        background-color: @accent !important;
+      }
+
+      &:active + .cdx-radio__icon, &:focus-within + .cdx-radio__icon {
+        background-color: darken(@accent, 10%) !important;
+        border-color: @surface0 !important;
+      }
+
+      &:checked {
+        + .cdx-radio__icon {
+          background-color: @surface0 !important;
+          border-color: @accent !important;
+        }
+
+        &:hover + .cdx-radio__icon {
+          background-color: darken(@accent, 5%) !important;
+          border-color: @surface0 !important;
+        }
+      }
+
+      &:disabled + .cdx-radio__icon {
+        border-color: @mantle !important;
+      }
+    }
+
+    .oo-ui-radioInputWidget [type="radio"] {
+      + span, &:enabled + span {
+        background-color: @base !important;
+        border-color: @surface0 !important;
+      }
+
+      &:hover + span {
+        background-color: @accent !important;
+      }
+
+      &:active + span, &:focus-within + span {
+        background-color: darken(@accent, 10%) !important;
+        border-color: @surface0 !important;
+      }
+
+      &:checked {
+        + span {
+          background-color: @surface0 !important;
+          border-color: @accent !important;
+        }
+
+        &:hover + span {
+          background-color: darken(@accent, 5%) !important;
+          border-color: @surface0 !important;
+        }
+      }
+
+      &:disabled + span {
+        border-color: @mantle !important;
+      }
     }
 
     /* View source */
