--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "http://127.0.0.1:8000/lib/mediawiki.less";
+@import "https://userstyles.catppuccin.com/lib/mediawiki.less";
 
 #mixins {
   .a() {
