Remove important. Seems to work fine now.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -1505,7 +1505,7 @@
     #lib.defaults();
     #lib.css-variables();
 
-    #__mediawiki.base() !important;
+    #__mediawiki.base();
 
     dl dd:nth-child(n) {
       background-color: @base !important;
