fix(arch-linux): apply mediawiki lib module correctly

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -290,14 +290,10 @@
     }
   }
 
-  #__mediawiki.reset();
-
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
     #lib.css-variables();
-
-    #__mediawiki.base() !important;
 
     body, content {
       color: @text !important;
@@ -1488,14 +1484,24 @@
 
 // Arch Wiki
 @-moz-document domain("wiki.archlinux.org") {
-  :root {
+  :root.skin-theme-clientpref-os,
+  .vector-feature-night-mode-enabled,
+  .skin-invert,
+  .notheme {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
     }
-
     @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
     }
+  }
+
+  :root.skin-theme-clientpref-night {
+    #catppuccin(@darkFlavor);
+  }
+
+  :root.skin-theme-clientpref-day {
+    #catppuccin(@lightFlavor);
   }
 
   #__mediawiki.reset();
