--- a/styles/scalar/catppuccin.user.less
+++ b/styles/scalar/catppuccin.user.less
@@ -36,7 +36,7 @@
     --scalar-background-1: @base;
     --scalar-background-2: @mantle;
     --scalar-background-3: @crust;
-    --scalar-background-accent: @accent;
+    --scalar-background-accent: fade(@accent, 12%);
     --scalar-border-color: @surface1;
     --scalar-color-green: @green;
     --scalar-color-red: @red;
