Add comments header formatting, and some metadata settings. Also, nest metadata under pkgdetails for neatness.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -414,6 +414,12 @@
           }
         }
 
+        span.text {
+          color: @base !important;
+          background-color: @accent !important;
+          border-color: @overlay1 !important;
+        }
+
         span.arrow {
           color: transparent !important;
           background-color: transparent !important;
@@ -749,6 +755,10 @@
     #lib.css-variables();
 
     #pkgdetails {
+      h2 {
+        border-color: @overlay1 !important;
+      }
+
       #pkginfo,
       #pkginfo * {
         background-color: @mantle !important;
@@ -758,6 +768,49 @@
       #detailslinks > div {
         background-color: @surface0 !important;
         border-color: @overlay0 !important;
+      }
+
+      #metadata {
+        h3 {
+          color: @text !important;
+          background-color: @surface0 !important;
+        }
+
+        #pkgfilelist {
+          ul > li {
+            &.d {
+              color: @subtext0 !important;
+            }
+
+            &.f {
+              color: @text !important;
+            }
+          }
+        }
+      }
+    }
+
+    .comment-header {
+      .edited {
+        color: @subtext0 !important;
+      }
+
+      .edit-comment > img {
+        background-color: inherit !important;
+        filter: @text-filter !important;
+
+        &:hover {
+          filter: @accent-filter !important;
+        }
+      }
+
+      .delete-comment-form input.delete-comment {
+        background-color: inherit !important;
+        filter: @text-filter !important;
+
+        &:hover {
+          filter: @accent-filter !important;
+        }
       }
     }
 
@@ -783,13 +836,6 @@
         color: @text !important;
         background-color: @surface0 !important;
         border-color: @surface1 !important;
-      }
-    }
-
-    #metadata {
-      h3 {
-        color: @text !important;
-        background-color: @surface0 !important;
       }
     }
 
