--- a/styles/netflix/catppuccin.user.less
+++ b/styles/netflix/catppuccin.user.less
@@ -3,7 +3,7 @@
 @namespace      LumivexCodes/netflix-catppuccin
 @version        2000.01.01
 @description    Catppuccin pastel theme for Netflix
-@author         LumivexCodes
+@author         Catppuccin
 @preprocessor   less
 @var select lightFlavor "Light Catppuccin Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
 @var select darkFlavor  "Dark Catppuccin Flavor"  ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
