--- a/styles/netflix/catppuccin.user.less
+++ b/styles/netflix/catppuccin.user.less
@@ -5,9 +5,9 @@
 @description    Catppuccin pastel theme for Netflix
 @author         Catppuccin
 @preprocessor   less
-@var select lightFlavor "Light Catppuccin Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
-@var select darkFlavor  "Dark Catppuccin Flavor"  ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
-@var select accentColor "Accent Color" ["rosewater:Rosewater", "pink:Pink", "mauve:Mauve", "blue:Blue", "teal:Teal"]
+@var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
+@var select darkFlavor "Dark Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha*"]
+@var select accentColor "Accent" ["rosewater:Rosewater", "flamingo:Flamingo", "pink:Pink", "mauve:Mauve*", "red:Red", "maroon:Maroon", "peach:Peach", "yellow:Yellow", "green:Green", "teal:Teal", "blue:Blue", "sapphire:Sapphire", "sky:Sky", "lavender:Lavender", "subtext0:Gray"]
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
