--- a/styles/netflix/catppuccin.user.less
+++ b/styles/netflix/catppuccin.user.less
@@ -2,7 +2,7 @@
 @name           Netflix Catppuccin
 @namespace      LumivexCodes/netflix-catppuccin
 @version        2000.01.01
-@description    Catppuccin pastel theme for Netflix
+@description    Soothing pastel theme for Netflix
 @author         Catppuccin
 @preprocessor   less
 @var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
