--- a/styles/netflix/catppuccin.user.less
+++ b/styles/netflix/catppuccin.user.less
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Netflix Catppuccin
-@namespace      LumivexCodes/netflix-catppuccin
+@namespace github.com/catppuccin/userstyles/styles/netflix
 @version        2000.01.01
 @description    Soothing pastel theme for Netflix
 @author         Catppuccin
