Add border change to headers. Useful in way too many places, not neatly overwritten otherwise.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -310,6 +310,10 @@
       color: @subtext0 !important;
     }
 
+    h1, h2, h3, h4, h5 {
+      border-color: @overlay1 !important;
+    }
+
     img, p {
       color: @text !important;
     }
@@ -432,11 +436,9 @@
 
         a {
           color: @accent !important;
-          border-color: @overlay1 !important;
 
           &:link, &:enabled {
             color: @accent !important;
-            border-color: @overlay1 !important;
 
             &:hover {
               color: darken(@accent, 5%) !important;
@@ -673,6 +675,56 @@
 
     #archdev-navbar ul li {
       a[href="/requests"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Requests
+@-moz-document url-prefix("https://aur.archlinux.org/register") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/register"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Requests
+@-moz-document url-prefix("https://aur.archlinux.org/login?next=/register") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/login?next=/register"] {
         color: @accent !important;
       }
     }
