Add pin-comment, remove dupe.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -847,15 +847,8 @@
         color: @subtext0 !important;
       }
 
-      .edit-comment > img {
-        background-color: inherit !important;
-        filter: @text-filter !important;
-
-        &:hover {
-          filter: @accent-filter !important;
-        }
-      }
-
+      .pin-comment,
+      .edit-comment > img,
       .delete-comment-form input.delete-comment {
         background-color: inherit !important;
         filter: @text-filter !important;
