Little too specific on the css. Mimic upstream aurweb.css, root .*-comment classes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -842,20 +842,21 @@
       }
     }
 
+    .delete-comment,
+    .undelete-comment,
+    .edit-comment,
+    .pin-comment {
+      background-color: inherit !important;
+      filter: @text-filter !important;
+
+      &:hover {
+        filter: @accent-filter !important;
+      }
+    }
+
     .comment-header {
       .edited {
         color: @subtext0 !important;
-      }
-
-      .pin-comment,
-      .edit-comment > img,
-      .delete-comment-form input.delete-comment {
-        background-color: inherit !important;
-        filter: @text-filter !important;
-
-        &:hover {
-          filter: @accent-filter !important;
-        }
       }
     }
 
